--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git://github.com/http-party/http-server.git"
   },
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+  },
   "keywords": [
     "cli",
     "command",
