--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: read
-    if: github.repository == 'http-party/http-server'
+    if: github.repository == 'm3nfis/http-server-with-headers'
     runs-on: ubuntu-latest
     steps:
       # Drafts your next release notes as pull requests are merged into master
